Fixed the scrollbar pixels.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -586,16 +586,23 @@ iframe {
 
 /* Custom scrollbar */
 .custom-scrollbar::-webkit-scrollbar {
-  width: 12px;
+  width: 4px;
+
 }
 
-.custom-scrollbar::-webkit-scrollbar-thumb {
+.custom-scrollbar::-webkit-scrollbar:horizontal {
+  height: 4px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb,
+.custom-scrollbar::-webkit-scrollbar-thumb:horizontal {
   background-color: #35363a;
   border-radius: 6px;
   box-shadow: 0 0 7px 2px rgba(204, 204, 204, 0.3);
 }
 
-.custom-scrollbar::-webkit-scrollbar-track {
+.custom-scrollbar::-webkit-scrollbar-track,
+.custom-scrollbar::-webkit-scrollbar-track:horizontal {
   background-color: #d3d3d3;
 }
 
